[project]
name = "graph-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "graspologic (>=3.4.4,<4.0.0)",
    "numpy (==1.26.4)",
    "scipy (>=1.17.0,<2.0.0)",
    "future (>=1.0.0,<2.0.0)",
    "llama-index (>=0.14.12,<0.15.0)",
    "llama-index-graph-stores-neo4j (>=0.5.1,<0.6.0)",
    "llama-index-llms-ollama (>=0.9.1,<0.10.0)",
    "invoke (>=2.2.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "llama-index-embeddings-huggingface (>=0.6.1,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
